                     longmac in some situations leading to map collisions.
                    Fixed gpsmap not reading netxml files with libz
                    Fixed gpsmap not getting network names correctly
                    Fixed handling tracks under inverse filters in gpsmap
                    Changed channel color from white to dark grey in gpsmap
Sep 08 2002  2.5.2  First iteration of gpsmap rewriting.  Command line args are
                     COMPLETELY changed.  Expect full functionality to return
                     soon.
                    Fixed gpsmap conversion to greyscale
                    Added track opacity to gpsmap
Sep 05 2002  2.5.2  Fixed client scrolling
                    Added client info pane
                    Finished first iteration of client panels
                    Added total packets to statistics panel
                    Changed signal decay to decay*2 on clients and networks
Sep 04 2002  2.5.2  Fixed killing server on exit glitch
                    Added client sorting
Sep 03 2002  2.5.2  Initial client display panel ('c').  Lots left to be done.
                    Updated docs for client
                    Fixed client signal decay
Sep 01 2002  2.5.2  Details no longer prints gps twice for single networks.
Aug 31 2002  2.5.2  Merged patch from poptix for gpsmap to support terraserver
                     images and to copy support for the new mapblast maps from
                     gpsdrive.
                    Set default ethereal directory to /usr/src/ethereal-0.9.6
                    Fixed speech error on blank SSID
Aug 30 2002  2.5.2  Added fixed-parameter support on bigendian systems.  Normal
                     packet detection/dissection should occur on bigendian now.
                    Minor tweaks to packet noise detection
                    Moved packet rate calculation to server-side
                    Fixed type field in files for lucent routers
Aug 29 2002  2.5.2  Fixed reassociation subtype