@@ -4,6 +4,7 @@ Sep 09 2002  2.5.2  Fixed longstanding minor bug in mac_addr, failed to zero
                     Fixed gpsmap not getting network names correctly
                     Fixed handling tracks under inverse filters in gpsmap
                     Changed channel color from white to dark grey in gpsmap
+                    Fixed gpsmap default output name
 Sep 08 2002  2.5.2  First iteration of gpsmap rewriting.  Command line args are
                      COMPLETELY changed.  Expect full functionality to return
                      soon.
